tests/custom/STARIS_2022/operation-type-errors/allDiff-type-error/stderr.expected
Error:
    Parser error in file: allDiff-type-error.essence Error is:
ValidatorError allDiff-type-error.essence:2:23:
  |
2 | such that b = allDiff(5)
  |                       ^
Type error:
	Expected:"Matrix or list"
	Got: int

